# brainblender

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
brainblender/: __init__.py  atlas.py  cli.py  export.py  mesh.py
brainblender/blender/: __init__.py  import_meshes.py
examples/: render-root-mesh.sh
